<resources>
    <string name="app_name">Translit</string>
    <string name="type_select">Select type:</string>
    <string name="input_cyrillic">Cyrillic</string>
    <string name="input_latin">Latin</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_share">Share</string>
    <string name="clipboard_copied">Copied to clipboard</string>
    <string name="shortcut_transliterate_long">Transliterate text</string>
    <string name="save_to_history">Save to history</string>
    <string name="history_title">History</string>
    <string name="no_history_found">No history found</string>
    <string name="saved_success">Saved to history</string>
    <string name="already_exists">Already exists in history</string>
    <string name="confirm_clear_history_title">Clear history</string>
    <string name="confirm_clear_history_message">Are you sure you want to clear all history?</string>
    <string name="confirm_clear_history_positive">Clear</string>
    <string name="confirm_clear_history_negative">Cancel</string>
    <string name="cd_open_history">Open history</string>
    <string name="cd_navigate_up">Navigate up</string>
    <string name="cd_clear_history_all">Clear all history</string>
    <string name="cd_history_rerun">Edit again</string>
    <string name="cd_history_delete">Delete</string>
    <string name="cd_clear_input">Clear text</string>
    <string name="cd_copy_output">Copy transliteration</string>
    <string name="cd_select_type">Transliteration standard</string>
    <string name="cd_info_tip">Standard description</string>
</resources>

